--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,13 @@ h5 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: x-large;
   font-weight: bold;
+  height: 100%;
 }
+
+.logo img {
+  height: 100%;
+}
+
 .menu-items {
   list-style-type: none;
   display: flex;
@@ -90,20 +96,23 @@ h5 {
 /************************************/
 /* HOME                             */
 /************************************/
-.home-img {
-  display: block;
-  border-radius: 50%;
-  }
 
-.project-card1 {
-  background-color: black;
-  width: 300px;
-  margin: 10px;
-  border-radius: 5px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+.grid-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px; /* Optional: Adds space between the images */
 }
-.image2 {
-  height: 300px;
+
+.phone {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px; /* Optional: Adds space between the images */
+}
+
+.phone img {
+  max-height: 350px;
+  width: 48%; 
+  object-fit: cover; 
 }
 
 #home {
@@ -113,9 +122,9 @@ h5 {
 /* **********************************/
 /*  PROJECTS                        */
 /************************************/
-#flex-projects {
+#flex-project {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap:wrap;
   justify-content: space-evenly;
 }
 .project-card {
@@ -126,6 +135,11 @@ h5 {
   border-radius: 5px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
+.home-img {
+  display:grid;
+  border-radius: 50%;
+}
+
 .project-card:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
@@ -186,6 +200,17 @@ h5 {
   display: inline-block;
   width: 24%;
 }
+/*.pic {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.home-img {
+  display: block;
+  border-radius: 50%;
+}*/
+
 /*******************************************/
 /* CONTACTS                            
   /**************/
@@ -237,8 +262,18 @@ h5 {
   background-color: aqua;
 }
 
-.card {
+/*.card {
   display: flex;
   flex-wrap: wrap;
   display: block;
 }
+.pic {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.home-img {
+  display: block;
+  border-radius: 50%;
+}*/
