--- a/ball.css
+++ b/ball.css
@@ -1,21 +1,67 @@
-#image {
-    display: flex;
-    width: 400px;
-    height: 500px;
-    gap: 10px;
-  }
+
   body {
     background-color: grey;
     color: white;
-  }
+    }
   p {
     color: black;
   }
   li {
     color: orange;
   }
-  .image{
-    width: 500px;
-    height: 250px;
+  #image1{
     display: flex;
+    gap:30px;
+    width:200px;
+    height: 500px;
+  }
+
+  #image2{
+    display: flex;
+    gap:40px;
+    width: 200px;
+    height: 400px;
+  }
+  #image3{
+    display: flex;
+    gap:30px;
+    width:100px;
+    height:40px;
+  }
+  #image4{
+    display: flex;
+    gap:30px;
+    width:200px;
+    margin:;
+    height: 500px;
+  }
+  #image5{
+    display: flex;
+    gap:30px;
+    width:200px;
+    height: 500px;
+  }
+  #image6{
+    display: flex;
+    gap:30px;
+    width:200px;
+    height: 500px;
+  }
+  #image7{
+    display: flex;
+    gap:30px;
+    width:200px;
+    height: 500px;
+  }
+  #image8{
+    display: flex;
+    gap:30px;
+    width: 100px;    
+    height: 500px;
+  }
+  #image9{
+    display: flex;
+    gap:30px;
+    width: 50px;
+    height: 400px;
   }
